change location and add link for location

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           <div class="row">
               <div class="col-lg-8 col-md-8">
                 <ul class="top-info text-center text-md-left">
-                    <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">9051 Constra Incorporate, USA</p>
+                    <li><i class="fas fa-map-marker-alt"></i> <p class="info-text"><a href="https://goo.gl/maps/qXXeDv6Py2ciqvR3A"
+                      target="_blank">Şeker Mah. İsmail Beliğ sk. No:3/C Selçuklu/KONYA</a></p>
                     </li>
                 </ul>
               </div>
