--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                   <li>
                     <div class="info-box">
                       <div class="info-box-content">
-                          <p class="info-box-title">Email Us</p>
-                          <p class="info-box-subtitle"><a href="mailto:office@Constra.com">office@Constra.com</a></p>
+                          <p class="info-box-title">Bize Mail Atın</p>
+                          <p class="info-box-subtitle"><a href="mailto:iletisim@mecraproje.com">iletisim@mecraproje.com</a></p>
                       </div>
                     </div>
                   </li>
