--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="contact.html">Get A Quote</a>
+                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
                   </li>
                 </ul><!-- Ul end -->
             </div><!-- header right end -->
