change instagram link and add target feature

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                       <a title="Twitter" href="https://twitter.com/themefisher.com">
                           <span class="social-icon"><i class="fab fa-twitter"></i></span>
                       </a>
-                      <a title="Instagram" href="https://instagram.com/themefisher.com">
+                      <a title="Instagram" href="https://www.instagram.com/mecraproje/" target="_blank">
                           <span class="social-icon"><i class="fab fa-instagram"></i></span>
                       </a>
                       <a title="Linkdin" href="https://github.com/themefisher.com">
