--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                       <a title="Instagram" href="https://www.instagram.com/mecraproje/" target="_blank">
                           <span class="social-icon"><i class="fab fa-instagram"></i></span>
                       </a>
-                      <a title="Linkdin" href="https://github.com/themefisher.com">
-                          <span class="social-icon"><i class="fab fa-github"></i></span>
+                      <a title="Linkedin" href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" target="_blank">
+                          <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                       </a>
                     </li>
                 </ul>
