change logo and alt information

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="row align-items-center">
             <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
                 <a class="d-block" href="index.html">
-                  <img loading="lazy" src="images/logo.png" alt="Constra">
+                  <img loading="lazy" src="images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
                 </a>
             </div><!-- logo end -->
   
