--- a/index.html
+++ b/index.html
@@ -129,11 +129,7 @@
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav mr-auto">
                       <li class="nav-item dropdown active">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Home <i class="fa fa-angle-down"></i></a>
-                          <ul class="dropdown-menu" role="menu">
-                            <li class="active"><a href="index.html">Home One</a></li>
-                            <li><a href="index-2.html">Home Two</a></li>
-                          </ul>
+                          <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
                       </li>
 
                       <li class="nav-item dropdown">
