--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
                       </li>
 
                       <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Company <i class="fa fa-angle-down"></i></a>
+                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="team.html">Our People</a></li>
-                            <li><a href="testimonials.html">Testimonials</a></li>
-                            <li><a href="faq.html">Faq</a></li>
-                            <li><a href="pricing.html">Pricing</a></li>
+                            <li><a href="about.html">Hakkımızda</a></li>
+                            <li><a href="team.html">Ekibimiz</a></li>
+                            <li><a href="testimonials.html">Müşterilerimiz</a></li>
+                            <li><a href="faq.html">SSO</a></li>
+                            <li><a href="pricing.html">Fiyat Politikamız</a></li>
                           </ul>
                       </li>
               
