--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                       </li>
               
                       <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Projects <i class="fa fa-angle-down"></i></a>
+                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Projelerimiz <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="projects.html">Projects All</a></li>
-                            <li><a href="projects-single.html">Projects Single</a></li>
+                            <li><a href="projects.html">Projelerimiz</a></li>
+                            <li><a href="projects-single.html">Proje Detay Sayfası</a></li>
                           </ul>
                       </li>
               
