--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                       </li>
               
                       <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services <i class="fa fa-angle-down"></i></a>
+                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Hizmetlerimiz <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
-                            <li><a href="services.html">Services All</a></li>
-                            <li><a href="service-single.html">Services Single</a></li>
+                            <li><a href="services.html">Hizmetlerimiz</a></li>
+                            <li><a href="service-single.html">Hizmet Detay Sayfası</a></li>
                           </ul>
                       </li>
               
