--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                       </li>
               
                       <li class="nav-item dropdown">
-                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">News <i class="fa fa-angle-down"></i></a>
+                          <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimizden Haberler <i class="fa fa-angle-down"></i></a>
                           <ul class="dropdown-menu" role="menu">
                             <li><a href="news-left-sidebar.html">News Left Sidebar</a></li>
                             <li><a href="news-right-sidebar.html">News Right Sidebar</a></li>
