--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                           </ul>
                       </li>
               
-                      <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                      <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
                     </ul>
                 </div>
               </nav>
