--- a/index.html
+++ b/index.html
@@ -791,8 +791,8 @@
     <div class="row">
         <div class="col-md-4">
           <div class="subscribe-call-to-acton">
-              <h3>Can We Help?</h3>
-              <h4>(+9) 847-291-4353</h4>
+              <h3>Aklınıza Takılan Sorular Mı Var? Bizi Hemen Arayın!</h3>
+              <h4><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></h4>
           </div>
         </div><!-- Col end -->
 
