change column size and center all the text

--- a/index.html
+++ b/index.html
@@ -789,8 +789,8 @@
 <section class="subscribe no-padding">
   <div class="container">
     <div class="row">
-        <div class="col-md-4">
-          <div class="subscribe-call-to-acton">
+        <div class="col-md-12">
+          <div class="subscribe-call-to-acton text-center">
               <h3>Aklınıza Takılan Sorular Mı Var? Bizi Hemen Arayın!</h3>
               <h4><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></h4>
           </div>
