--- a/index.html
+++ b/index.html
@@ -888,8 +888,8 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6 footer-widget footer-about">
-            <h3 class="widget-title">About Us</h3>
-            <img loading="lazy" width="200px" class="footer-logo" src="images/footer-logo.png" alt="Constra">
+            <h3 class="widget-title">Hakkımızda</h3>
+            <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png" alt="Mecra Proje Logo">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
               labore et dolore magna aliqua.</p>
             <div class="footer-social">
