--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
                       class="fab fa-facebook-f"></i></a></li>
                 <li><a href="https://twitter.com/themefisher" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 </li>
-                <li><a href="https://instagram.com/themefisher" aria-label="Instagram"><i
+                <li><a href="https://www.instagram.com/mecraproje/" aria-label="Instagram" target="_blank"><i
                       class="fab fa-instagram"></i></a></li>
                 <li><a href="https://github.com/themefisher" aria-label="Github"><i class="fab fa-github"></i></a></li>
               </ul>
