change footer linkedin link and add target feature

--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
                 </li>
                 <li><a href="https://www.instagram.com/mecraproje/" aria-label="Instagram" target="_blank"><i
                       class="fab fa-instagram"></i></a></li>
-                <li><a href="https://github.com/themefisher" aria-label="Github"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" aria-label="Linkedin" target="_blank"><i class="fab fa-linkedin"></i></a></li>
               </ul>
             </div><!-- Footer social end -->
           </div><!-- Col end -->
