--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
           </div><!-- Col end -->
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
-            <h3 class="widget-title">Services</h3>
+            <h3 class="widget-title">Hizmetlerimiz</h3>
             <ul class="list-arrow">
               <li><a href="service-single.html">Pre-Construction</a></li>
               <li><a href="service-single.html">General Contracting</a></li>
