change footer menu titles

--- a/index.html
+++ b/index.html
@@ -938,11 +938,11 @@
           <div class="col-md-6">
             <div class="footer-menu text-center text-md-right">
               <ul class="list-unstyled">
-                <li><a href="about.html">About</a></li>
-                <li><a href="team.html">Our people</a></li>
-                <li><a href="faq.html">Faq</a></li>
+                <li><a href="about.html">Hakkımızda</a></li>
+                <li><a href="team.html">Ekibimiz</a></li>
+                <li><a href="faq.html">Sıkça Sorulan Sorular</a></li>
                 <li><a href="news-left-sidebar.html">Blog</a></li>
-                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="pricing.html">Fiyat Politikamız</a></li>
               </ul>
             </div>
           </div>
