--- a/about.html
+++ b/about.html
@@ -297,7 +297,7 @@
       </div>
     </div>
   </section>
-  < <section id="ts-team" class="ts-team">
+  <section id="ts-team" class="ts-team">
     <div class="container">
       <div class="row text-center">
         <div class="col-lg-12">
@@ -417,7 +417,7 @@
         </div>
       </div>
     </div>
-    </section>
+  </section>
     <footer id="footer" class="footer bg-overlay">
       <div class="footer-main">
         <div class="container">
