--- a/faq.html
+++ b/faq.html
@@ -441,7 +441,7 @@
               </div>
             </div>
           </div>
-          < <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
+          <div id="back-to-top" data-spy="affix" data-offset-top="10" class="back-to-top position-fixed">
             <button class="btn btn-primary" title="Back to Top">
               <i class="fa fa-angle-double-up"></i>
             </button>
