--- a/projects.html
+++ b/projects.html
@@ -25,24 +25,19 @@
           <div class="col-lg-8 col-md-8">
             <ul class="top-info text-center text-md-left">
               <li><i class="fas fa-map-marker-alt"></i>
-                <p class="info-text">9051 Constra Incorporate, USA</p>
+                <p class="info-text"><a href="https://goo.gl/maps/qXXeDv6Py2ciqvR3A" target="_blank">Şeker Mah. İsmail
+                    Beliğ sk. No:3/C Selçuklu/KONYA</a></p>
               </li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
             <ul class="list-unstyled">
               <li>
-                <a title="Facebook" href="https://facebbok.com/themefisher.com">
-                  <span class="social-icon"><i class="fab fa-facebook-f"></i></span>
-                </a>
-                <a title="Twitter" href="https://twitter.com/themefisher.com">
-                  <span class="social-icon"><i class="fab fa-twitter"></i></span>
-                </a>
-                <a title="Instagram" href="https://instagram.com/themefisher.com">
+                <a title="Instagram" href="https://www.instagram.com/mecraproje/" target="_blank">
                   <span class="social-icon"><i class="fab fa-instagram"></i></span>
                 </a>
-                <a title="Linkdin" href="https://github.com/themefisher.com">
-                  <span class="social-icon"><i class="fab fa-github"></i></span>
+                <a title="Linkedin" href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" target="_blank">
+                  <span class="social-icon"><i class="fab fa-linkedin"></i></span>
                 </a>
               </li>
             </ul>
