change footer for all pages

--- a/projects.html
+++ b/projects.html
@@ -314,35 +314,30 @@
         <div class="container">
           <div class="row justify-content-between">
             <div class="col-lg-4 col-md-6 footer-widget footer-about">
-              <h3 class="widget-title">About Us</h3>
-              <img loading="lazy" width="200px" class="footer-logo" src="images/footer-logo.png" alt="Constra">
+              <h3 class="widget-title">Hakkımızda</h3>
+              <img loading="lazy" width="200px" class="footer-logo" src="images/mecra-logo-beyaz.png"
+                alt="Mecra Proje Logo">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci done idunt ut
                 labore et dolore magna aliqua.</p>
               <div class="footer-social">
                 <ul>
-                  <li><a href="https://facebook.com/themefisher" aria-label="Facebook"><i
-                        class="fab fa-facebook-f"></i></a></li>
-                  <li><a href="https://twitter.com/themefisher" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                  </li>
-                  <li><a href="https://instagram.com/themefisher" aria-label="Instagram"><i
+                  <li><a href="https://www.instagram.com/mecraproje/" aria-label="Instagram" target="_blank"><i
                         class="fab fa-instagram"></i></a></li>
-                  <li><a href="https://github.com/themefisher" aria-label="Github"><i class="fab fa-github"></i></a>
-                  </li>
+                  <li><a href="https://linkedin.com/company/mecra-proje-tasarim-uygulama" aria-label="Linkedin"
+                      target="_blank"><i class="fab fa-linkedin"></i></a></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
-              <h3 class="widget-title">Working Hours</h3>
+              <h3 class="widget-title">Çalışma Saatlerimiz</h3>
               <div class="working-hours">
                 We work 7 days a week, every day excluding major holidays. Contact us if you have an emergency, with our
                 Hotline and Contact form.
-                <br><br> Monday - Friday: <span class="text-right">10:00 - 16:00 </span>
-                <br> Saturday: <span class="text-right">12:00 - 15:00</span>
-                <br> Sunday and holidays: <span class="text-right">09:00 - 12:00</span>
+                <br><br> Pazartesi - Cumartesi: <span class="text-right">8:00 - 18:00 </span>
               </div>
             </div>
             <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
-              <h3 class="widget-title">Services</h3>
+              <h3 class="widget-title">Hizmetlerimiz</h3>
               <ul class="list-arrow">
                 <li><a href="service-single.html">Pre-Construction</a></li>
                 <li><a href="service-single.html">General Contracting</a></li>
@@ -369,11 +364,11 @@
             <div class="col-md-6">
               <div class="footer-menu text-center text-md-right">
                 <ul class="list-unstyled">
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="team.html">Our people</a></li>
-                  <li><a href="faq.html">Faq</a></li>
+                  <li><a href="about.html">Hakkımızda</a></li>
+                  <li><a href="team.html">Ekibimiz</a></li>
+                  <li><a href="faq.html">Sıkça Sorulan Sorular</a></li>
                   <li><a href="news-left-sidebar.html">Blog</a></li>
-                  <li><a href="pricing.html">Pricing</a></li>
+                  <li><a href="pricing.html">Fiyat Politikamız</a></li>
                 </ul>
               </div>
             </div>
