--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Constra - Construction Html5 Template</title>
+  <title>Sıkça Sorulan Sorular - Mecra Proje</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Construction Html5 Template">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
