translate to content

--- a/404.html
+++ b/404.html
@@ -157,11 +157,10 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Features</h1>
+                <h1 class="banner-title">Sayfa Bulunamadı - 404</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Features</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
                     <li class="breadcrumb-item active" aria-current="page">404</li>
                   </ol>
                 </nav>
@@ -180,11 +179,10 @@
                 <h2><strong>404</strong></h2>
               </div>
               <div class="error-message">
-                <h3>Oops... Page Not Found!</h3>
+                <h3>Aradığınız Sayfa Bulunamadı!</h3>
               </div>
               <div class="error-body">
-                Try using the button below to go to main page of the site <br>
-                <a href="index.html" class="btn btn-primary">Back to Home Page</a>
+                <a href="index.html" class="btn btn-primary">Anasayfa'ya Geri Dön</a>
               </div>
             </div>
           </div>
