--- a/news-single.html
+++ b/news-single.html
@@ -104,7 +104,7 @@
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item">
-                      <a href="index.html" class="nav-link" data-toggle="dropdown">Anasayfa</a>
+                      <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
