--- a/typography.html
+++ b/typography.html
@@ -103,8 +103,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
