add call to action

--- a/index.html
+++ b/index.html
@@ -784,6 +784,20 @@
         </div>
       </div>
     </section>
+    <section class="call-to-action classic">
+      <div class="row align-items-center">
+        <div class="col-md-8 text-center text-md-left">
+          <div class="call-to-action-text">
+            <h3 class="action-title" style="color: #ffb600;">Sormak İstediğiniz Sorular Mı? Hemen Bize Ulaşın!</h3>
+          </div>
+        </div>
+        <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
+          <div class="call-to-action-btn">
+            <a class="btn btn-primary" href="contact.html">İletişime Geç</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer id="footer" class="footer bg-overlay">
       <div class="footer-main">
         <div class="container">
