change services menu structure

--- a/content/services/service-single.html
+++ b/content/services/service-single.html
@@ -117,13 +117,8 @@
                         <li><a href="../../pricing.html">Fiyat Politikamız</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Projelerimiz <i
-                          class="fa fa-angle-down"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="../../projects.html">Projelerimiz</a></li>
-                        <li><a href="../../projects-single.html">Proje Detay Sayfası</a></li>
-                      </ul>
+                    <li class="nav-item">
+                      <a href="../../projects.html" class="nav-link">Projelerimiz</a>
                     </li>
                     <li class="nav-item active">
                       <a href="../../services.html" class="nav-link active">Hizmetlerimiz</a>
