translate to content, change link href and add call to action

--- a/services.html
+++ b/services.html
@@ -141,12 +141,11 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Service</h1>
+                <h1 class="banner-title">Hizmetlerimiz</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Services</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">All Services</li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Hizmetlerimiz</li>
                   </ol>
                 </nav>
               </div>
@@ -168,10 +167,10 @@
                   <img loading="lazy" src="images/icon-image/service-icon1.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Zero Harm Everyday</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">Zero Harm Everyday</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
@@ -187,10 +186,10 @@
                   <img loading="lazy" src="images/icon-image/service-icon2.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Virtual Construction</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">Virtual Construction</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
@@ -206,10 +205,10 @@
                   <img loading="lazy" src="images/icon-image/service-icon3.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">Build To Last</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">Build To Last</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
@@ -225,10 +224,10 @@
                   <img loading="lazy" src="images/icon-image/service-icon4.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">EXTERIOR DESIGN</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">EXTERIOR DESIGN</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
@@ -244,10 +243,10 @@
                   <img loading="lazy" src="images/icon-image/service-icon5.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">RENOVATION</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">RENOVATION</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
@@ -263,14 +262,28 @@
                   <img loading="lazy" src="images/icon-image/service-icon6.png" alt="service-icon">
                 </div>
                 <div class="ts-service-info">
-                  <h3 class="service-box-title"><a href="service-single.html">SAFETY MANAGEMENT</a></h3>
+                  <h3 class="service-box-title"><a href="./content/services/service-single.html">SAFETY MANAGEMENT</a></h3>
                   <p>You have ideas, goals, and dreams. We have a culturally diverse, forward thinking team looking for
                     talent like. Lorem ipsum dolor suscipit.</p>
-                  <a class="learn-more d-inline-block" href="service-single.html" aria-label="service-details"><i
+                  <a class="learn-more d-inline-block" href="./content/services/service-single.html" aria-label="service-details"><i
                       class="fa fa-caret-right"></i> Learn more</a>
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="call-to-action classic">
+      <div class="row align-items-center">
+        <div class="col-md-8 text-center text-md-left">
+          <div class="call-to-action-text">
+            <h3 class="action-title" style="color: #ffb600;">Sormak İstediğiniz Sorular Mı? Hemen Bize Ulaşın!</h3>
+          </div>
+        </div>
+        <div class="col-md-4 text-center text-md-right mt-3 mt-md-0">
+          <div class="call-to-action-btn">
+            <a class="btn btn-primary" href="contact.html">İletişime Geç</a>
           </div>
         </div>
       </div>
