--- a/content/services/service-single.html
+++ b/content/services/service-single.html
@@ -51,8 +51,8 @@
           <div class="logo-area">
             <div class="row align-items-center">
               <div class="logo col-lg-3 text-center text-lg-left mb-3 mb-md-5 mb-lg-0">
-                <a class="d-block" href="../../index.html">
-                  <img loading="lazy" src="../../images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
+                <a class="d-block" href="index.html">
+                  <img loading="lazy" src="images/mecra-logo-siyah.png" alt="Mecra Proje Logo">
                 </a>
               </div>
               <div class="col-lg-9 header-right">
@@ -61,7 +61,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                         <p class="info-box-title">Bizi Arayın</p>
-                        <p class="info-box-subtitle"><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></p>
+                        <p class="info-box-subtitle"><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
                       </div>
                     </div>
                   </li>
@@ -83,7 +83,7 @@
                     </div>
                   </li>
                   <li class="header-get-a-quote">
-                    <a class="btn btn-primary" href="../../contact.html">Fiyat Teklifi Alın</a>
+                    <a class="btn btn-primary" href="contact.html">Fiyat Teklifi Alın</a>
                   </li>
                 </ul>
               </div>
@@ -103,30 +103,30 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a href="../../index.html" class="nav-link">Anasayfa</a>
+                    <li class="nav-item dropdown active">
+                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
-                        <li><a href="../../about.html">Hakkımızda</a></li>
-                        <li><a href="../../team.html">Ekibimiz</a></li>
-                        <li><a href="../../testimonials.html">Müşterilerimiz</a></li>
-                        <li><a href="../../faq.html">SSO</a></li>
-                        <li><a href="../../pricing.html">Fiyat Politikamız</a></li>
+                        <li><a href="about.html">Hakkımızda</a></li>
+                        <li><a href="team.html">Ekibimiz</a></li>
+                        <li><a href="testimonials.html">Müşterilerimiz</a></li>
+                        <li><a href="faq.html">SSO</a></li>
+                        <li><a href="pricing.html">Fiyat Politikamız</a></li>
                       </ul>
                     </li>
                     <li class="nav-item">
-                      <a href="../../projects.html" class="nav-link">Projelerimiz</a>
-                    </li>
-                    <li class="nav-item active">
-                      <a href="../../services.html" class="nav-link active">Hizmetlerimiz</a>
+                      <a href="projects.html" class="nav-link">Projelerimiz</a>
                     </li>
                     <li class="nav-item">
-                      <a href="../../news.html" class="nav-link">Şirketimizden Haberler</a>
+                      <a href="services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="../../contact.html">İletişim</a></li>
+                    <li class="nav-item">
+                      <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
