--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                         <p class="info-box-title">Bizi Arayın</p>
-                        <p class="info-box-subtitle"><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></p>
+                        <p class="info-box-subtitle"><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
                       </div>
                     </div>
                   </li>
@@ -103,8 +103,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a href="index.html" class="nav-link">Anasayfa</a>
+                    <li class="nav-item dropdown active">
+                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
@@ -123,8 +123,8 @@
                     <li class="nav-item">
                       <a href="services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
-                    <li class="nav-item active">
-                      <a href="news.html" class="nav-link active">Şirketimizden Haberler</a>
+                    <li class="nav-item">
+                      <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
                   </ul>
