--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                         <p class="info-box-title">Bizi Arayın</p>
-                        <p class="info-box-subtitle"><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></p>
+                        <p class="info-box-subtitle"><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
                       </div>
                     </div>
                   </li>
@@ -103,8 +103,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a href="index.html" class="nav-link">Anasayfa</a>
+                    <li class="nav-item dropdown active">
+                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
@@ -117,8 +117,8 @@
                         <li><a href="pricing.html">Fiyat Politikamız</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item active">
-                      <a href="projects.html" class="nav-link active">Projelerimiz</a>
+                    <li class="nav-item">
+                      <a href="projects.html" class="nav-link">Projelerimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="services.html" class="nav-link">Hizmetlerimiz</a>
