--- a/testimonials.html
+++ b/testimonials.html
@@ -61,7 +61,7 @@
                     <div class="info-box">
                       <div class="info-box-content">
                         <p class="info-box-title">Bizi Arayın</p>
-                        <p class="info-box-subtitle"><a href="tel:(+9) 847-291-4353">(+9) 847-291-4353</a></p>
+                        <p class="info-box-subtitle"><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
                       </div>
                     </div>
                   </li>
@@ -103,11 +103,11 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item">
-                      <a href="index.html" class="nav-link">Anasayfa</a>
-                    </li>
                     <li class="nav-item dropdown active">
-                      <a href="#" class="nav-link active dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
+                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="about.html">Hakkımızda</a></li>
