--- a/contact.html
+++ b/contact.html
@@ -148,12 +148,6 @@
     </div>
     <section id="main-container" class="main-container">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-12">
-            <h2 class="section-title">Reaching our Office</h2>
-            <h3 class="section-sub-title">Find Our Location</h3>
-          </div>
-        </div>
         <div class="row">
           <div class="col-md-4">
             <div class="ts-service-box-bg text-center h-100">
@@ -185,7 +179,7 @@
               </span>
               <div class="ts-service-box-content">
                 <h4>Bizi Arayın</h4>
-                <p>(+9) 847-291-4353</p>
+                <p><a href="tel:(+90) 507-891-3738">(+90) 507-891-3738</a></p>
               </div>
             </div>
           </div>
