--- a/contact.html
+++ b/contact.html
@@ -98,22 +98,14 @@
                     <li class="nav-item">
                       <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
-                          class="fa fa-angle-down"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="about.html">Hakkımızda</a></li>
-                        <li><a href="team.html">Ekibimiz</a></li>
-                        <li><a href="testimonials.html">Müşterilerimiz</a></li>
-                        <li><a href="faq.html">SSO</a></li>
-                        <li><a href="pricing.html">Fiyat Politikamız</a></li>
-                      </ul>
+                    <li class="nav-item">
+                      <a href="about.html" class="nav-link">Hakkımızda</a>
+                    </li>
+                    <li class="nav-item">
+                      <a href="team.html" class="nav-link">Ekibimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="projects.html" class="nav-link">Projelerimiz</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
