--- a/team.html
+++ b/team.html
@@ -95,25 +95,17 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    <li class="nav-item">
+                      <a href="index.html" class="nav-link">Anasayfa</a>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
-                          class="fa fa-angle-down"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="about.html">Hakkımızda</a></li>
-                        <li><a href="team.html">Ekibimiz</a></li>
-                        <li><a href="testimonials.html">Müşterilerimiz</a></li>
-                        <li><a href="faq.html">SSO</a></li>
-                        <li><a href="pricing.html">Fiyat Politikamız</a></li>
-                      </ul>
+                    <li class="nav-item">
+                      <a href="about.html" class="nav-link">Hakkımızda</a>
+                    </li>
+                    <li class="nav-item active">
+                      <a href="team.html" class="nav-link active">Ekibimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="projects.html" class="nav-link">Projelerimiz</a>
-                    </li>
-                    <li class="nav-item">
-                      <a href="services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
